--- a/public/_layout.ejs
+++ b/public/_layout.ejs
@@ -20,7 +20,8 @@
       <% } %>
       <%- partial('_includes/_footer') %>
     </div>
-    <script src="/assets/js/jquery-3.3.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- <script src="/assets/js/jquery-3.3.1.min.js"></script> -->
     <script src="/assets/js/main.js"></script>
   </body>
 </html>
