--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,15 +1,15 @@
 @font-face {
   font-family: 'Baton Turbo Regular';
   src: url('../fonts/BatonTurboWeb-Regular.eot') format('eot'),
-        url('../fonts/BatonTurboWeb-Regular.woff') format('woff');
+    url('../fonts/BatonTurboWeb-Regular.woff') format('woff');
 }
 
 html {
   font-size: 16px;
   line-height: 1.1;
   font-family: 'Baton Turbo Regular', Arial, Verdana, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
+  /* -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility; */
 }
 
 html, body {
