revise main id to tag

--- a/public/_layout.ejs
+++ b/public/_layout.ejs
@@ -22,9 +22,9 @@
 
       <% if (current.path[0] === 'index' || current.path[0] === 'work') { %>
 
-        <div id="main">
+        <main>
           <%- yield %>
-        </div>
+        </main>
 
       <% } else { %>
 
