change 'title' to 'sitename' in data

--- a/public/_includes/_nav.ejs
+++ b/public/_includes/_nav.ejs
@@ -1,5 +1,5 @@
 <nav id="nav">
   <h2>
-    <a href="<%= current.path == 'index' ? '/work' : '/' %>"><%= title %></a>
+    <a href="<%= current.path == 'index' ? '/work' : '/' %>"><%= sitename %></a>
   </h2>
 </nav>
