--- a/public/_layout.ejs
+++ b/public/_layout.ejs
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title><%= title %></title>
+    <title><%= sitename %></title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="<%= description %>">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="<%= title %>">
+    <meta property="og:site_name" content="<%= sitename %>">
     <meta property="og:url" content="<%= url %>">
-    <meta property="og:title" content="<%= title %>">
+    <meta property="og:title" content="<%= sitename %>">
     <meta property="og:description" content="<%= description %>">
 
     <link rel="stylesheet" href="/assets/css/main.css">
