--- a/public/_includes/_footer.ejs
+++ b/public/_includes/_footer.ejs
@@ -1,3 +1,3 @@
 <footer>
-  <p>&copy; <%= new Date().getFullYear() %> <%= title %></p>
+  <p>&copy; <%= new Date().getFullYear() %> <%= sitename %></p>
 </footer>
