--- a/public/_layout.ejs
+++ b/public/_layout.ejs
@@ -35,7 +35,7 @@
       <%- partial('_includes/_footer') %>
 
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <!-- <script src="/assets/js/jquery-3.3.1.min.js"></script> -->
     <script src="/assets/js/main.js"></script>
   </body>
