fix special projects link

--- a/public/_includes/_landing.ejs
+++ b/public/_includes/_landing.ejs
@@ -21,8 +21,8 @@ For "breakable links", i.e., 2-word links that break across lines depending on w
     <%# unbroken link visible in landscape view, hidden in portrait %>
     <a href="special-projects" class="special-projects u-l l-br">special projects</a><span class="l-br">,</span>
     <%# broken link visible in portrait view, hidden in landscape %>
-    <a href="special-projects" class="special-projects p-br"><span class="u-l">special</span></a><br class="p-br">
-    <a href="special-projects" class="special-projects p-br"><span class="u-l">projects</span>,</a>
+    <a href="special-projects" class="special-projects u-l p-br">special</a><br class="p-br">
+    <a href="special-projects" class="special-projects u-l p-br">projects</a><span class="p-br">,</span>
     <a href="animation" class="animation u-l">animation</a>,<br class="l-br"> and<br class="p-br"> sometimes
     <a href="art-commissions" class="art-commissions u-l">art commissions</a>.
   </span><br>
