--- a/public/_layout.ejs
+++ b/public/_layout.ejs
@@ -22,7 +22,7 @@
 
       <% if (current.path[0] === 'index' || current.path[0] === 'work') { %>
 
-        <main>
+        <main id="container">
           <%- yield %>
         </main>
 
@@ -33,10 +33,9 @@
       <% } %>
 
       <%- partial('_includes/_footer') %>
-
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.js"integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-    <!-- <script src="/assets/js/jquery-3.3.1.min.js"></script> -->
-    <script src="/assets/js/vanilla.js"></script>
+    <% if (current.source === 'index') { %>
+      <script src="/assets/js/rollover.js"></script>
+    <% } %>
   </body>
 </html>
