add rollover to grid for rollover event listener

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -2,6 +2,6 @@
   <%- partial('/_includes/_landing') %>
 </section>
 
-<section id="grid" class="hidden">
+<section id="grid" class="hidden rollover">
   <%- partial('_includes/_cards') %>
 </section>
