--- a/public/work.ejs
+++ b/public/work.ejs
@@ -2,6 +2,6 @@
   <%- partial('_includes/_landing') %>
 </section>
 
-<section id="grid" class="active">
+<section id="grid" class="active rollover">
   <%- partial('_includes/_cards') %>
 </section>
