add conditional for rendering related cards per category page

--- a/public/_includes/_cards.ejs
+++ b/public/_includes/_cards.ejs
@@ -1,5 +1,9 @@
 <% Object.entries(public.projects._data).forEach(function ([cardId, cardData]) { %>
-  <a href="/projects/<%= Number(cardId) %>" class="<%= cardData.category %> card">
+  <% if (current.source === cardData.category) { %>
+    <a href="/projects/<%= Number(cardId) %>" class="<%= cardData.category %> card current">
+  <% } else { %>
+    <a href="/projects/<%= Number(cardId) %>" class="<%= cardData.category %> card">
+  <% } %>
     <img class="card-image" src="<%= cardData.image %>" alt="<%= cardData.title %>">
     <div class="<%= cardData.category %> <%= cardData.color %> card-overlay"></div>
   </a>
