--- a/public/_layout.ejs
+++ b/public/_layout.ejs
@@ -40,7 +40,7 @@
     <% } %>
     <% var categories = ['print-design', 'illustration', 'identity-development', 'exhibition-design', 'special-projects', 'animation', 'art-commissions'] %>
     <% if (categories.includes(source)) { %>
-      <script src="/assets/js/hover.js"></script>
+      <script src="/assets/js/reveal.js"></script>
     <% } %>
   </body>
 </html>
