add grayhighlighter to rollover event

--- a/public/_includes/_landing.ejs
+++ b/public/_includes/_landing.ejs
@@ -26,5 +26,5 @@ For "breakable links", i.e., 2-word links that break across lines depending on w
     <a href="animation" class="animation u-l">animation</a>,<br class="l-br"> and<br class="p-br"> sometimes
     <a href="art-commissions" class="art-commissions u-l">art commissions</a>.
   </span><br>
-  Click <a href="projects" class="u-l">here</a> to view some<br class="p-br"> samples of<br class="l-br"> our work.<br class="p-br"> Please <a href="contact" class="contact u-l">contact us</a> if you’d<br> like to learn more.</span>
+  Click <a href="projects" class="all-gray u-l">here</a> to view some<br class="p-br"> samples of<br class="l-br"> our work.<br class="p-br"> Please <a href="contact" class="contact u-l">contact us</a> if you’d<br> like to learn more.</span>
 </h1>
