revise fancy underline

--- a/public/_includes/_landing.ejs
+++ b/public/_includes/_landing.ejs
@@ -9,22 +9,22 @@ For "breakable links", i.e., 2-word links that break across lines depending on w
 <h1>
   <span class="rollover">
     Fluora Studio is a design<br class="p-br"> service<br class="l-br"> specializing in<br class="p-br">
-    <a href="print-design" class="print-design u-l">print design</a>,
-    <a href="illustration" class="illustration u-l">illustration</a>,<br>
-    <a href="identity-development" class="identity-development u-l">identity development</a>,
+    <a href="print-design" class="print-design u-l">print design,</a>
+    <a href="illustration" class="illustration u-l">illustration,</a><br>
+    <a href="identity-development" class="identity-development u-l">identity development,</a>
     <br class="p-br">
     <%# unbroken link visible in portrait view, hidden in landscape %>
-    <a href="exhibition-design" class="exhibition-design u-l p-br">exhibition design</a><span class="p-br">,</span>
+    <a href="exhibition-design" class="exhibition-design u-l p-br">exhibition design,</a>
     <%# broken link visible in landscape view, hidden in portrait %>
-    <a href="exhibition-design" class="exhibition-design u-l l-br">exhibition</a><br class="l-br">
-    <a href="exhibition-design" class="exhibition-design u-l l-br">design</a><span class="l-br">,</span>
+    <a href="exhibition-design" class="exhibition-design u-l u-l-x l-br">exhibition</a><br class="l-br">
+    <a href="exhibition-design" class="exhibition-design u-l l-br">design,</a>
     <%# unbroken link visible in landscape view, hidden in portrait %>
-    <a href="special-projects" class="special-projects u-l l-br">special projects</a><span class="l-br">,</span>
+    <a href="special-projects" class="special-projects u-l l-br">special projects,</a>
     <%# broken link visible in portrait view, hidden in landscape %>
-    <a href="special-projects" class="special-projects u-l p-br">special</a><br class="p-br">
-    <a href="special-projects" class="special-projects u-l p-br">projects</a><span class="p-br">,</span>
-    <a href="animation" class="animation u-l">animation</a>,<br class="l-br"> and<br class="p-br"> sometimes
-    <a href="art-commissions" class="art-commissions u-l">art commissions</a>.
+    <a href="special-projects" class="special-projects u-l u-l-x p-br">special</a><br class="p-br">
+    <a href="special-projects" class="special-projects u-l p-br">projects,</a>
+    <a href="animation" class="animation u-l">animation,</a><br class="l-br"> and<br class="p-br"> sometimes
+    <a href="art-commissions" class="art-commissions u-l">art commissions.</a>
   </span><br>
-  Click <a href="projects" class="all-gray u-l">here</a> to view some<br class="p-br"> samples of<br class="l-br"> our work.<br class="p-br"> Please <a href="contact" class="contact u-l">contact us</a> if you’d<br> like to learn more.</span>
+  Click <a href="projects" class="all-gray u-l u-l-x">here</a> to view some<br class="p-br"> samples of<br class="l-br"> our work.<br class="p-br"> Please <a href="contact" class="contact u-l u-l-x">contact us</a> if you’d<br> like to learn more.</span>
 </h1>
