add category classname to grid divs

--- a/public/identity-development.ejs
+++ b/public/identity-development.ejs
@@ -1,4 +1,4 @@
-<section id="landing" class="hidden">
+<section id="landing" class="hidden identity-development">
   <%- partial('_includes/_landing') %>
 </section>
 
