--- a/public/animation.ejs
+++ b/public/animation.ejs
@@ -1,4 +1,4 @@
-<section id="landing" class="hidden">
+<section id="landing" class="hidden animation">
   <%- partial('_includes/_landing') %>
 </section>
 
