--- a/public/art-commissions.ejs
+++ b/public/art-commissions.ejs
@@ -1,4 +1,4 @@
-<section id="landing" class="hidden">
+<section id="landing" class="hidden art-commissions">
   <%- partial('_includes/_landing') %>
 </section>
 
