--- a/public/illustration.ejs
+++ b/public/illustration.ejs
@@ -1,4 +1,4 @@
-<section id="landing" class="hidden">
+<section id="landing" class="hidden illustration">
   <%- partial('_includes/_landing') %>
 </section>
 
