--- a/public/print-design.ejs
+++ b/public/print-design.ejs
@@ -1,4 +1,4 @@
-<section id="landing" class="hidden">
+<section id="landing" class="hidden print-design">
   <%- partial('_includes/_landing') %>
 </section>
 
