--- a/public/special-projects.ejs
+++ b/public/special-projects.ejs
@@ -1,4 +1,4 @@
-<section id="landing" class="hidden">
+<section id="landing" class="hidden special-projects">
   <%- partial('_includes/_landing') %>
 </section>
 
