change nav -> header

--- a/public/_includes/_header.ejs
+++ b/public/_includes/_header.ejs
@@ -1,5 +1,5 @@
-<nav id="nav">
+<header id="header">
   <h2>
     <a href="<%= current.path == 'index' ? '/work' : '/' %>"><%= sitename %></a>
   </h2>
-</nav>
+</header>
