--- a/public/_layout.ejs
+++ b/public/_layout.ejs
@@ -18,7 +18,7 @@
   <body>
     <div id="page">
 
-      <%- partial('_includes/_nav') %>
+      <%- partial('_includes/_header') %>
 
       <% if (current.source === 'contact' || current.source === 'slideshow') { %>
 
